<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AsciiCam</string>
    <string name="aboutText">AsciiCam 1.2.1\n© 2012-2017 Brian Nenninger\n\nComments and bug reports: bnenning@gmail.com\n\nSource Code: https://github.com/dozingcat/AsciiCam\n\nTo take a picture, touch the shutter icon in the upper left. The smaller icons under the shutter in order are:\n- Color: Cycles between color modes of black and white, primary colors only, and all colors.\n- Settings: Allows you to change the characters used to display the image. You can use different characters for each color mode. There is also an option to automatically create ASCII images from pictures you take with the standard camera app.\n- Gallery: Shows a list of all the pictures you\'ve taken. Touch an image to view it full screen, where you will have the option to delete it, or share it as an image, HTML, or text.\n- Convert to ASCII: Allows you to select an existing picture on your device, which will be converted to an ASCII image. (The original file will not be modified).\n- Switch Camera: Switches between rear and front facing cameras.\n\nAsciiCam contains code and images from the Android Open Source Project, used under the terms of the Apache License, Version 2.0: http://www.apache.org/licenses/LICENSE-2.0.\n\nColor wheel image by Mazenl77 from http://findicons.com/pack/679/nx10, used under the Creative Commons CC-BY license. Convert icon by Oxygen Icons from http://openiconlibrary.sourceforge.net/gallery2/?./Icons/actions/format-font-size-less.png, used under the Creative Commons CC-BY-SA license. Material icons from https://design.google.com/icons/, used under the Creative Commons CC-BY license.</string>
    <string name="noImagesFound">You have not saved any pictures yet.</string>
    <string name="errorSavingPicture">Error saving picture</string>

	<string name="deleteImageButtonLabel">Delete Picture</string>
	<string name="shareButtonLabel">Share Picture</string>
	<string name="exitViewImageButtonLabel">Return</string>
	
	<string name="shareDialogTitle">How do you want to share this picture?</string>
	<string name="shareImageOptionLabel">Share Image</string>
	<string name="shareHtmlOptionLabel">Share HTML</string>
	<string name="shareTextOptionLabel">Share Text</string>
	<string name="shareDialogYesLabel">Share</string>
	<string name="shareDialogNoLabel">Cancel</string>
			
	<string name="shareImageTitle">Share image using:</string>
	<string name="shareHtmlTitle">Share HTML using:</string>
	<string name="shareTextTitle">Share text using:</string>
		
	<string name="galleryButtonLabel">Gallery</string>
	<string name="aboutButtonLabel">About</string>
	<string name="preferencesButtonLabel">Preferences</string>
	
	<string name="pixelCharsPrefIdPrefix">pixelChars.</string>
	
    <string name="whiteOnBlackPixelCharsPrefId">pixelChars.WHITE_ON_BLACK</string>
    <string name="whiteOnBlackPixelCharsPrefTitle">White on black characters</string>
    <string name="whiteOnBlackPixelCharsPrefSummary">Characters for white on black mode.</string>
    <string name="whiteOnBlackPixelCharsPrefMessage">Enter characters to use for white on black images from darkest to brightest, or leave blank for the default of .:oO8@</string>

    <string name="blackOnWhitePixelCharsPrefId">pixelChars.BLACK_ON_WHITE</string>
    <string name="blackOnWhitePixelCharsPrefTitle">Black on white characters</string>
    <string name="blackOnWhitePixelCharsPrefSummary">Characters for black on white mode.</string>
    <string name="blackOnWhitePixelCharsPrefMessage">Enter characters to use for black on white images from darkest to brightest, or leave blank for the default of #o:..</string>

    <string name="ansiColorPixelCharsPrefId">pixelChars.ANSI_COLOR</string>
    <string name="ansiColorPixelCharsPrefTitle">ANSI color characters</string>
    <string name="ansiColorPixelCharsPrefSummary">Characters for ANSI color mode.</string>
    <string name="ansiColorPixelCharsPrefMessage">Enter characters to use in images from darkest to brightest, or leave blank for the default of .:oO8@</string>

    <string name="fullColorPixelCharsPrefId">pixelChars.FULL_COLOR</string>
    <string name="fullColorPixelCharsPrefTitle">Full color characters</string>
    <string name="fullColorPixelCharsPrefSummary">Characters for full color mode.</string>
    <string name="fullColorPixelCharsPrefMessage">Enter characters to use in images from darkest to brightest. Full color mode usually works best with fewer or even just one character. Leave blank for default of O8@</string>

    <string name="autoConvertPicturesPrefId">autoConvertPictures</string>
    <string name="autoConvertPicturesPrefTitle">Automatically convert camera pictures</string>

    <string name="controlsOnLeftPrefId">controlsOnLeft</string>
    <string name="controlsOnLeftPrefTitle">Controls on left</string>
</resources>
