<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="Preferences">
        <EditTextPreference android:key="@string/whiteOnBlackPixelCharsPrefId" android:enabled="true" 
            android:title="@string/whiteOnBlackPixelCharsPrefTitle" android:dialogMessage="@string/whiteOnBlackPixelCharsPrefMessage" />
        <EditTextPreference android:key="@string/blackOnWhitePixelCharsPrefId" android:enabled="true" 
            android:title="@string/blackOnWhitePixelCharsPrefTitle" android:dialogMessage="@string/blackOnWhitePixelCharsPrefMessage" />
        <EditTextPreference android:key="@string/ansiColorPixelCharsPrefId" android:enabled="true" 
            android:title="@string/ansiColorPixelCharsPrefTitle" android:dialogMessage="@string/ansiColorPixelCharsPrefMessage" />
        <EditTextPreference android:key="@string/fullColorPixelCharsPrefId" android:enabled="true" 
            android:title="@string/fullColorPixelCharsPrefTitle" android:dialogMessage="@string/fullColorPixelCharsPrefMessage" />

        <CheckBoxPreference android:key="@string/autoConvertPicturesPrefId" android:enabled="true" 
            android:title="@string/autoConvertPicturesPrefTitle" />
        <CheckBoxPreference android:key="@string/controlsOnLeftPrefId" android:enabled="true"
            android:title="@string/controlsOnLeftPrefTitle" />
    </PreferenceCategory>
</PreferenceScreen>
